# Multimodel-Language-Translator-with-GUI

./: README.md
tra/: CMakeLists.txt  Credits.qml  RecentTranslationsPage.qml  ReportPage.qml  aiFacts.py  database.py  detail.qml  main.cpp  main.qml  main2.qml  qml.qrc  tra.pro  tra.pro.qtds  tra.pro.user.71db1bc  tra.pro.user.c60ee4f  tra.pro.user.d902a28  tran.qrc  translations.db  translator.cpp  translator.h  translator.py  translator.ui  translatorback.py
